--- a/cvm-attestation-sample-app/CMakeLists.txt
+++ b/cvm-attestation-sample-app/CMakeLists.txt
@@ -2,6 +2,11 @@ cmake_minimum_required(VERSION 3.5)
 
 project(AttestationClient)
 
+find_package(CURL REQUIRED)
+find_package(Boost REQUIRED)
+find_package(nlohmann_json REQUIRED)
+find_package(jsoncpp REQUIRED)
+
 set(CMAKE_PROJECT_TARGET AttestationClient)
 
 add_definitions (-DPLATFORM_UNIX)
@@ -23,4 +28,8 @@ add_executable(${CMAKE_PROJECT_TARGET} main.cpp
 
 target_link_libraries(${CMAKE_PROJECT_TARGET} azguestattestation -lz)
 target_link_libraries(${CMAKE_PROJECT_TARGET} curl)
-target_link_libraries(${CMAKE_PROJECT_TARGET} jsoncpp)
+target_link_libraries(${CMAKE_PROJECT_TARGET}
+    Boost::boost
+    nlohmann_json::nlohmann_json
+    jsoncpp_lib
+)
