cmake: Add install() instructions
For now only runtime libs and programs, no headers yet.

Signed-off-by: Jeremi Piotrowski <jpiotrowski@microsoft.com>

	modified:   client-library/src/Attestation/AttestationClient/lib/DynamicLibrary/CMakeLists.txt
	modified:   cvm-attestation-sample-app/CMakeLists.txt

--- a/cvm-attestation-sample-app/CMakeLists.txt
+++ b/cvm-attestation-sample-app/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 
 project(AttestationClient)
 
+include(GNUInstallDirs)
 find_package(CURL REQUIRED)
 find_package(Boost REQUIRED)
 find_package(nlohmann_json REQUIRED)
@@ -32,4 +33,7 @@ target_link_libraries(${CMAKE_PROJECT_TARGET}
     Boost::boost
     nlohmann_json::nlohmann_json
     jsoncpp_lib
+)
+install(TARGETS ${CMAKE_PROJECT_TARGET}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
